Init model HTML + CSS

--- a/maquette/index.html
+++ b/maquette/index.html
@@ -35,29 +35,98 @@
     </section>
 
     <section class="section2">
-      <h3 class="section2__title">Quiz du jour</h3>
-      <div class="section2__card">
-        <img class="section2__img" src="#" alt="#" />
-      </div>
+      <h3 class="section__title">Quiz du jour</h3>
+      <article class="quiz__card">
+        <div class="card-header">
+          <img
+            class="card-header__img"
+            src="https://source.unsplash.com/600x400/?food"
+            alt=""
+          />
+        </div>
+        <div class="card-body">
+          <h4 class="card__title">Titre Quiz</h4>
+          <div class="card-body__tag">
+            <span class="card-body__categorie">Catégorie</span>
+            <span class="card-body__difficulty">Difficulté</span>
+          </div>
+          <div class="card-body__tag2">
+            <div class="card-body__autor">
+              <span class="autor__img"
+                ><img src="./assets/img/account_circle.png" alt=""
+              /></span>
+              <span class="autor__name">Auteur</span>
+            </div>
+            <span class="card-body__favoris"
+              ><img src="./assets/img/favorite.png" alt="Favori"
+            /></span>
+          </div>
+        </div>
+      </article>
     </section>
 
     <section class="section3">
-      <h3 class="section3__title">Quiz du moment</h3>
+      <h3 class="section__title">Quiz du moment</h3>
       <div class="section3__list-quiz">
-        <article class="list-quiz__card">
+        <article class="quiz__card">
           <div class="card-header">
-            <img class="card-header__img" src="" alt="" />
-            <div class="card-header__title">
-              <h4 class="card__title">Titre</h4>
-            </div>
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?car,automobile"
+              alt=""
+            />
           </div>
           <div class="card-body">
-            <span class="card-body__author">Auteur</span>
-            <span class="card-body__difficulty">diffculté</span>
-            <span class="card-body__favoris">favoris</span>
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
+          </div>
+        </article>
+        <article class="quiz__card">
+          <div class="card-header">
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?computer"
+              alt=""
+            />
+          </div>
+          <div class="card-body">
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
           </div>
         </article>
       </div>
     </section>
+
+    <footer class="footer">
+      <p>Quiz'O'Tron</p>
+    </footer>
   </body>
 </html>
