--- a/maquette/index.html
+++ b/maquette/index.html
@@ -14,12 +14,14 @@
       <nav class="header__nav">
         <img
           class="header__menu"
-          src="./assets/img/menu_burger.png"
+          src="./assets/img/menu_burger_white.png"
           alt="Menu hamburger"
         />
         <a href="#"><h1 class="header__title">Quiz'O'Tron</h1></a>
         <a class="header__profil" href="#"
-          ><img src="./assets/img/account_circle.png" alt="Profil utilisateur"
+          ><img
+            src="./assets/img/account_circle_white.png"
+            alt="Profil utilisateur"
         /></a>
       </nav>
     </header>
@@ -126,7 +128,10 @@
     </section>
 
     <footer class="footer">
-      <p>Quiz'O'Tron</p>
+      <div class="footer__text">
+        <p class="footer__mentions">Mentions Légales</p>
+        <p class="footer__name">Quiz'O'Tron 2023 &copy;</p>
+      </div>
     </footer>
   </body>
 </html>
