Update model HTML + CSS: media queries and style

--- a/maquette/index.html
+++ b/maquette/index.html
@@ -38,7 +38,7 @@
 
     <section class="section2">
       <h3 class="section__title">Quiz du jour</h3>
-      <article class="quiz__card">
+      <article class="quiz__card-day">
         <div class="card-header">
           <img
             class="card-header__img"
@@ -124,13 +124,172 @@
             </div>
           </div>
         </article>
+        <article class="quiz__card">
+          <div class="card-header">
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?car,automobile"
+              alt=""
+            />
+          </div>
+          <div class="card-body">
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
+          </div>
+        </article>
+        <article class="quiz__card">
+          <div class="card-header">
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?computer"
+              alt=""
+            />
+          </div>
+          <div class="card-body">
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
+          </div>
+        </article>
+        <article class="quiz__card">
+          <div class="card-header">
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?computer"
+              alt=""
+            />
+          </div>
+          <div class="card-body">
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
+          </div>
+        </article>
+        <article class="quiz__card">
+          <div class="card-header">
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?computer"
+              alt=""
+            />
+          </div>
+          <div class="card-body">
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
+          </div>
+        </article>
+        <article class="quiz__card">
+          <div class="card-header">
+            <img
+              class="card-header__img"
+              src="https://source.unsplash.com/600x400/?computer"
+              alt=""
+            />
+          </div>
+          <div class="card-body">
+            <h4 class="card__title">Titre Quiz</h4>
+            <div class="card-body__tag">
+              <span class="card-body__categorie">Catégorie</span>
+              <span class="card-body__difficulty">Difficulté</span>
+            </div>
+            <div class="card-body__tag2">
+              <div class="card-body__autor">
+                <span class="autor__img"
+                  ><img src="./assets/img/account_circle.png" alt=""
+                /></span>
+                <span class="autor__name">Auteur</span>
+              </div>
+              <span class="card-body__favoris"
+                ><img src="./assets/img/favorite.png" alt="Favori"
+              /></span>
+            </div>
+          </div>
+        </article>
       </div>
     </section>
 
     <footer class="footer">
-      <div class="footer__text">
-        <p class="footer__mentions">Mentions Légales</p>
+      <div class="footer__contact">
+        <h3>Contact</h3>
+        <span class="contact__mail">contact@quizotron.com</span>
+      </div>         
+
+   
+      <div class="footer__site-map">
+        <a href="#">Mentions Légales</a>
+ 
+        <div class="site-map__about"> 
+          <p>Navigation</p>         
+          <ul class="site-map__about-list">
+            <li><a href="#">À propos</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Liste des quiz</a></li>
+            <li><a href="#">Inscription</a></li>
+            <li><a href="#">Connexion</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Protection des données personnelles</a></li>
+          </ul>          
+        </div>
         <p class="footer__name">Quiz'O'Tron 2023 &copy;</p>
+
+        
+
+        
       </div>
     </footer>
   </body>
